--- a/custom_page_layout.css
+++ b/custom_page_layout.css
@@ -4,3 +4,14 @@
     margin-left: auto;
     margin-right: auto;
 }
+.photo-border
+{
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.photo
+{
+
+}
